--- a/src/app/components/sheet-component/reusable-components/skills-component/skills.component.html
+++ b/src/app/components/sheet-component/reusable-components/skills-component/skills.component.html
@@ -1,5 +1,5 @@
 <div class="sheetComponent">
-  <div class="sheetComponentBody">
+  <div class="sheetComponentBody headerLess">
     <table class="headerRowTable">
       <tr class="headerRow">
         <td>{{ 'SHEET.SKILLS.SKILL' | translate }}</td>
