Added another reusable component

--- a/src/app/components/sheet-component/sheet.component.scss
+++ b/src/app/components/sheet-component/sheet.component.scss
@@ -43,6 +43,9 @@
         padding-right: 10px;
       }
     }
+    tr.last {
+      border-bottom: 1pt solid black;
+    }
   }
   table.headerRowTable {
     tr:first-child {
