--- a/src/app/components/sheet-component/structural-components/sheet-body-component/general-component/general.component.html
+++ b/src/app/components/sheet-component/structural-components/sheet-body-component/general-component/general.component.html
@@ -16,4 +16,5 @@
      fxLayoutWrap="nowrap">
   <gurpsy-attributes-component></gurpsy-attributes-component>
   <gurpsy-hit-location-component></gurpsy-hit-location-component>
+  <gurpsy-fatigue-hit-component></gurpsy-fatigue-hit-component>
 </div>
