Fixed some bugs that resulted from the swith to a config json in Local Storage

--- a/src/app/components/dialog-component/delete-settings-dialog/delete-settings-dialog.component.html
+++ b/src/app/components/dialog-component/delete-settings-dialog/delete-settings-dialog.component.html
@@ -2,8 +2,8 @@
 <md-dialog-content>
 
   <div>
-    <md-checkbox [(ngModel)]="clearTheme">
-      {{'DIALOG.DELETE_DATA.THEME'| translate}}
+    <md-checkbox [(ngModel)]="clearSettings">
+      {{'DIALOG.DELETE_DATA.SETTINGS'| translate}}
     </md-checkbox>
   </div>
 
