Fixed an error that broke the build

--- a/src/app/components/sheet-component/reusable-components/player-information-component/player-information.component.html
+++ b/src/app/components/sheet-component/reusable-components/player-information-component/player-information.component.html
@@ -14,7 +14,7 @@
       </tr>
       <tr>
         <td>{{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}</td>
-        <td>{{sheet.metaData.playerInformation.creationDate}}</td>
+        <td>{{sheet.metaData.playerInformation.createdOn}}</td>
       </tr>
     </table>
   </div>
