Changed naming convention of the reusable an structural components

--- a/src/app/components/sheet-component/structural-components/sheet-body-component/advantages-disadvantages-component/advantages-disadvantages.component.html
+++ b/src/app/components/sheet-component/structural-components/sheet-body-component/advantages-disadvantages-component/advantages-disadvantages.component.html
@@ -3,12 +3,12 @@
      fxLayout.xs="column"
      fxLayoutAlign="space-between stretch"
      fxLayoutWrap="nowrap">
-  <gurpsy-advantages-component
+  <gurpsy-advantages
     class="flex-item"
     fxFlex="100%">
-  </gurpsy-advantages-component>
-  <gurpsy-disadvantages-component
+  </gurpsy-advantages>
+  <gurpsy-disadvantages
     class="flex-item"
     fxFlex="100%">
-  </gurpsy-disadvantages-component>
+  </gurpsy-disadvantages>
 </div>
