--- a/src/app/components/sheet-component/structural-components/sheet-body-component/general-component/general.component.html
+++ b/src/app/components/sheet-component/structural-components/sheet-body-component/general-component/general.component.html
@@ -4,17 +4,17 @@
        fxLayout="row"
        fxLayoutAlign="space-between stretch"
        fxLayoutWrap="nowrap">
-    <gurpsy-portrait-component class="flex-item"></gurpsy-portrait-component>
-    <gurpsy-points-component class="flex-item"></gurpsy-points-component>
+    <gurpsy-portrait class="flex-item"></gurpsy-portrait>
+    <gurpsy-points class="flex-item"></gurpsy-points>
   </div>
-  <gurpsy-description-component></gurpsy-description-component>
+  <gurpsy-description></gurpsy-description>
 </div>
 
 <div class="flex-container"
      fxLayout="row"
      fxLayoutAlign="space-between stretch"
      fxLayoutWrap="nowrap">
-  <gurpsy-attributes-component></gurpsy-attributes-component>
-  <gurpsy-hit-location-component></gurpsy-hit-location-component>
-  <gurpsy-fatigue-hit-component></gurpsy-fatigue-hit-component>
+  <gurpsy-attributes></gurpsy-attributes>
+  <gurpsy-hit-location></gurpsy-hit-location>
+  <gurpsy-fatigue-hit></gurpsy-fatigue-hit>
 </div>
