--- a/src/app/components/sheet-component/structural-components/sheet-body-component/sheet-body.component.html
+++ b/src/app/components/sheet-component/structural-components/sheet-body-component/sheet-body.component.html
@@ -1,18 +1,18 @@
-<gurpsy-general-component
+<gurpsy-struct-general
   *ngIf="bodyContent === sheetBodyComponents.GENERAL">
-</gurpsy-general-component>
-<gurpsy-notes-component
+</gurpsy-struct-general>
+<gurpsy-notes
   *ngIf="bodyContent === sheetBodyComponents.NOTES">
-</gurpsy-notes-component>
-<gurpsy-skills-component
+</gurpsy-notes>
+<gurpsy-skills
   *ngIf="bodyContent === sheetBodyComponents.SKILLS">
-</gurpsy-skills-component>
-<gurpsy-advantages-disadvantages-component
+</gurpsy-skills>
+<gurpsy-struct-advantages-disadvantages
   *ngIf="bodyContent === sheetBodyComponents.ADVANTAGES">
-</gurpsy-advantages-disadvantages-component>
-<gurpsy-equipment-component
+</gurpsy-struct-advantages-disadvantages>
+<gurpsy-equipment
   *ngIf="bodyContent === sheetBodyComponents.EQUIPMENT">
-</gurpsy-equipment-component>
-<gurpsy-spells-component
+</gurpsy-equipment>
+<gurpsy-spells
   *ngIf="bodyContent === sheetBodyComponents.MAGIC">
-</gurpsy-spells-component>
+</gurpsy-spells>
