--- a/src/app/components/sheet-component/structural-components/sheet-header-component/sheet-header.component.html
+++ b/src/app/components/sheet-component/structural-components/sheet-header-component/sheet-header.component.html
@@ -2,11 +2,11 @@
      fxLayout="row"
      fxLayoutAlign="space-between stretch"
      fxLayoutWrap="nowrap">
-  <gurpsy-portrait-component class="portraitWrapper flex-item"
-                             fxFlex="112px"
-                             fxHide="false"
-                             fxHide.xs>
-  </gurpsy-portrait-component>
+  <gurpsy-portrait class="portraitWrapper flex-item"
+                   fxFlex="112px"
+                   fxHide="false"
+                   fxHide.xs>
+  </gurpsy-portrait>
   <div class="centerComponentsWrapper flex-container flex-item"
        fxLayout="column"
        fxLayoutAlign="start stretch"
@@ -15,21 +15,21 @@
          fxLayout="row"
          fxLayoutAlign="space-between stretch"
          fxLayoutWrap="nowrap">
-      <gurpsy-identity-component class="identityWrapper flex-item"
-                                 fxFlex="50%"></gurpsy-identity-component>
-      <gurpsy-player-information-component class="playerInformationWrapper flex-item"
-                                           fxFlex="50%"></gurpsy-player-information-component>
+      <gurpsy-identity class="identityWrapper flex-item"
+                       fxFlex="50%"></gurpsy-identity>
+      <gurpsy-player-information class="playerInformationWrapper flex-item"
+                                 fxFlex="50%"></gurpsy-player-information>
     </div>
-    <gurpsy-description-component class="descriptionWrapper flex-item flex-container"
-                                  fxLayout="column"
-                                  fxLayoutAlign="start stretch"
-                                  fxFlex
-                                  fxHide="false"
-                                  fxHide.xs
-                                  ></gurpsy-description-component>
+    <gurpsy-description class="descriptionWrapper flex-item flex-container"
+                        fxLayout="column"
+                        fxLayoutAlign="start stretch"
+                        fxFlex
+                        fxHide="false"
+                        fxHide.xs
+    ></gurpsy-description>
   </div>
-  <gurpsy-points-component class="pointsWrapper flex-item"
-                           fxFlex="130px"
-                           fxHide="false"
-                           fxHide.xs></gurpsy-points-component>
+  <gurpsy-points class="pointsWrapper flex-item"
+                 fxFlex="130px"
+                 fxHide="false"
+                 fxHide.xs></gurpsy-points>
 </div>
