Added some text for the About dialog

--- a/src/app/components/dialog-component/about-dialog/about-dialog.component.html
+++ b/src/app/components/dialog-component/about-dialog/about-dialog.component.html
@@ -1,7 +1,6 @@
 <h1 md-dialog-title> {{'APPLICATION'| translate}}</h1>
 <md-dialog-content>
-
-
+  {{'DIALOG.ABOUT.ABOUT'| translate}}
 </md-dialog-content>
 
 <md-dialog-actions align="end">
