Added code to enable theme icon changes color on selection. Actual implementation will come when the next version of Angular Material gets released

--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -12,7 +12,7 @@
   <div class="sideNavigationContent">
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.GENERAL)"
-            [class.selected]="sheetBodyContent == sheetBodyComponents.GENERAL"
+            [class.selected]="sheetBodyContent === sheetBodyComponents.GENERAL"
             class="sideNavigationContentLine flex-container"
             fxLayoutAlign="space-between stretch"
             fxLayoutWrap="nowrap">
