--- a/src/app/components/dialog/about-dialog/about-dialog.component.html
+++ b/src/app/components/dialog/about-dialog/about-dialog.component.html
@@ -1,6 +1,19 @@
-<h1 md-dialog-title> {{'APPLICATION'| translate}}</h1>
+<div class="header flex-container"
+     fxLayoutAlign="space-between stretch"
+     fxLayoutWrap="nowrap">
+  <div class="flex-item">
+    <img class="gurpsy-face" src="assets/images/gurpsy-face.png">
+  </div>
+  <div class="flex-item">
+    <div class="title"> {{'APPLICATION'| translate}}</div>
+    <div class="version"> {{'VERSION'| translate}}</div>
+  </div>
+</div>
+
 <md-dialog-content>
-  {{'DIALOG.ABOUT.ABOUT'| translate}}
+  <div class="about">
+    {{'DIALOG.ABOUT.ABOUT'| translate}}
+  </div>
 </md-dialog-content>
 
 <md-dialog-actions align="end">
