--- a/src/app/components/dialog/about-dialog/about-dialog.component.scss
+++ b/src/app/components/dialog/about-dialog/about-dialog.component.scss
@@ -1,5 +1,26 @@
 @import "../../../../gurpsy-material-theme";
 
+.gurpsy-face {
+  height: 100px;
+}
+
+.about {
+  font-size: small;
+}
+
+.header {
+  margin-bottom: 20px;
+
+  .title {
+    font-size: x-large;
+    font-weight: bold;
+  }
+
+  .version {
+    font-size: small;
+    text-align: right;
+  }
+}
 
 
 
