First (failed) attempt to get 3D working.

--- a/src/app/components/dialog/dice-dialog/dice-dialog.component.scss
+++ b/src/app/components/dialog/dice-dialog/dice-dialog.component.scss
@@ -1,5 +1,15 @@
 @import "../../../../gurpsy-material-theme";
 
+md-dialog-content {
+  width: 100%;
+  height: 350px;
+
+  .diceView {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 
 
 
