--- a/src/app/components/dialog/dice-dialog/dice-dialog.component.html
+++ b/src/app/components/dialog/dice-dialog/dice-dialog.component.html
@@ -1,5 +1,7 @@
 <md-dialog-content>
-  Content
+  <div #diceView class="diceView">
+
+  </div>
 </md-dialog-content>
 
 <md-dialog-actions align="end">
