Second attempt to get 3D to work. Hooray, it works

--- a/src/app/components/dialog/dice-dialog/dice-dialog.component.html
+++ b/src/app/components/dialog/dice-dialog/dice-dialog.component.html
@@ -1,6 +1,8 @@
 <md-dialog-content>
-  <div #diceView class="diceView">
+  <div class="diceView">
+    <canvas #canvas (window:resize)="onResize($event)">
 
+    </canvas>
   </div>
 </md-dialog-content>
 
