--- a/src/app/components/dialog/dice-dialog/dice-dialog.component.scss
+++ b/src/app/components/dialog/dice-dialog/dice-dialog.component.scss
@@ -7,6 +7,11 @@ md-dialog-content {
   .diceView {
     width: 100%;
     height: 100%;
+
+    canvas {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
