Removed window.resize, which is unneeded

--- a/src/app/components/dialog/dice-dialog/dice-dialog.component.html
+++ b/src/app/components/dialog/dice-dialog/dice-dialog.component.html
@@ -1,7 +1,6 @@
 <md-dialog-content>
   <div class="diceView">
-    <canvas #canvas (window:resize)="onResize($event)">
-
+    <canvas #canvas>
     </canvas>
   </div>
 </md-dialog-content>
