Removed unneeded flex stuff from the menu

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -21,29 +21,28 @@
         <md-icon>more_vert</md-icon>
       </button>
       <md-menu x-position="before" y-position="below" #settings="mdMenu">
-        <button md-menu-item (click)="onOpenSheetDialog()" class="flex-container">
-          <md-icon class="flex-item">account_box</md-icon>
-          <span class="flex-item" fxFlex="100%">{{ 'MENU.OPEN' | translate }}</span>
+        <button md-menu-item (click)="onOpenSheetDialog()">
+          <md-icon>account_box</md-icon>
+          <span>{{ 'MENU.OPEN' | translate }}</span>
         </button>
-        <button md-menu-item (click)="onOpenThrowDiceDialog()" class="flex-container">
-          <md-icon class="flex-item">group_work</md-icon>
-          <span class="flex-item" fxFlex="100%">{{ 'MENU.THROW_DICE' | translate }}</span>
+        <button md-menu-item (click)="onOpenThrowDiceDialog()">
+          <md-icon>group_work</md-icon>
+          <span>{{ 'MENU.THROW_DICE' | translate }}</span>
         </button>
         <button md-menu-item
-                (click)="onThemeChange()"
-                class="flex-container">
-          <md-icon class="flex-item" [class.selected]="theme == night">
+                (click)="onThemeChange()">
+          <md-icon [class.selected]="theme == night">
             insert_photo
           </md-icon>
-          <span class="flex-item" fxFlex="100%">   {{ 'MENU.DARK_THEME' | translate }}</span>
+          <span>   {{ 'MENU.DARK_THEME' | translate }}</span>
         </button>
-        <button md-menu-item (click)="onOpenAboutDialog()" class="flex-container">
-          <md-icon class="flex-item">pan_tool</md-icon>
-          <span class="flex-item" fxFlex="100%">{{ 'MENU.ABOUT' | translate }}</span>
+        <button md-menu-item (click)="onOpenAboutDialog()">
+          <md-icon>pan_tool</md-icon>
+          <span>{{ 'MENU.ABOUT' | translate }}</span>
         </button>
-        <button md-menu-item (click)="onOpenDeleteSettingsDialog()" class="flex-container">
-          <md-icon class="flex-item">delete</md-icon>
-          <span class="flex-item" fxFlex="100%">{{ 'MENU.CLEAR_SETTINGS' | translate }}</span>
+        <button md-menu-item (click)="onOpenDeleteSettingsDialog()">
+          <md-icon>delete</md-icon>
+          <span>{{ 'MENU.CLEAR_SETTINGS' | translate }}</span>
         </button>
       </md-menu>
     </div>
