--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -13,56 +13,44 @@
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.GENERAL)"
             [class.selected]="sheetBodyContent === sheetBodyComponents.GENERAL"
-            class="sideNavigationContentLine flex-container"
-            fxLayoutAlign="space-between stretch"
-            fxLayoutWrap="nowrap">
-      <md-icon class="flex-item">accessibility</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SUBJECT.GENERAL'| translate}}</span>
+            class="sideNavigationContentLine">
+      <md-icon>accessibility</md-icon>
+      <span fxFlex="100%">{{'SUBJECT.GENERAL'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.ADVANTAGES)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.ADVANTAGES"
-            class="sideNavigationContentLine flex-container"
-            fxLayoutAlign="space-between stretch"
-            fxLayoutWrap="nowrap">
-      <md-icon class="flex-item">hearing</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SUBJECT.DIS_ADVANTAGES'| translate}}</span>
+            class="sideNavigationContentLine">
+      <md-icon>hearing</md-icon>
+      <span fxFlex="100%">{{'SUBJECT.DIS_ADVANTAGES'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.SKILLS)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.SKILLS"
-            class="sideNavigationContentLine flex-container"
-            fxLayoutAlign="space-between stretch"
-            fxLayoutWrap="nowrap">
-      <md-icon class="flex-item">school</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SUBJECT.SKILLS'| translate}}</span>
+            class="sideNavigationContentLine">
+      <md-icon>school</md-icon>
+      <span fxFlex="100%">{{'SUBJECT.SKILLS'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.MAGIC)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.MAGIC"
-            class="sideNavigationContentLine flex-container"
-            fxLayoutAlign="space-between stretch"
-            fxLayoutWrap="nowrap">
-      <md-icon class="flex-item">flash_on</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SUBJECT.MAGIC'| translate}}</span>
+            class="sideNavigationContentLine">
+      <md-icon>flash_on</md-icon>
+      <span fxFlex="100%">{{'SUBJECT.MAGIC'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.EQUIPMENT)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.EQUIPMENT"
-            class="sideNavigationContentLine flex-container"
-            fxLayoutAlign="space-between stretch"
-            fxLayoutWrap="nowrap">
-      <md-icon class="flex-item">card_travel</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SUBJECT.EQUIPMENT'| translate}}</span>
+            class="sideNavigationContentLine">
+      <md-icon>card_travel</md-icon>
+      <span fxFlex="100%">{{'SUBJECT.EQUIPMENT'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.NOTES)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.NOTES"
-            class="sideNavigationContentLine flex-container"
-            fxLayoutAlign="space-between stretch"
-            fxLayoutWrap="nowrap">
-      <md-icon class="flex-item">mode_edit</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SUBJECT.NOTES'| translate}}</span>
+            class="sideNavigationContentLine">
+      <md-icon>mode_edit</md-icon>
+      <span fxFlex="100%">{{'SUBJECT.NOTES'| translate}}</span>
     </button>
   </div>
 </div>
