Expanded encumbrance and lifting-moving components on sheet

--- a/src/app/components/sheet/reusable/encumbrance/encumbrance.component.html
+++ b/src/app/components/sheet/reusable/encumbrance/encumbrance.component.html
@@ -1,3 +1,49 @@
-<p>
-  encumbrance works!
-</p>
+<div class="sheetComponent">
+  <div class="sheetComponentHeader">
+    {{ 'SHEET.ENCUMBRANCE.ENCUMBRANCE' | translate }}
+  </div>
+  <div class="sheetComponentBody flex-container"
+       fxLayout="row"
+       fxLayoutAlign="space-between stretch">
+    <div class="flex-item" fxFlex="100%">
+      <table>
+        <tr class="headerRow">
+          <td>{{ 'SHEET.ENCUMBRANCE.LEVEL' | translate }}</td>
+          <td>{{ 'SHEET.ENCUMBRANCE.MAX_LOAD' | translate }}</td>
+          <td>{{ 'SHEET.ENCUMBRANCE.MOVE' | translate }}</td>
+          <td>{{ 'SHEET.ENCUMBRANCE.DODGE' | translate }}</td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.ENCUMBRANCE.NONE' | translate }}</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.ENCUMBRANCE.LIGHT' | translate }}</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.ENCUMBRANCE.MEDIUM' | translate }}</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.ENCUMBRANCE.HEAVY' | translate }}</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.ENCUMBRANCE.XHEAVY' | translate }}</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
