--- a/src/app/components/sheet/reusable/lifting-moving/lifting-moving.component.html
+++ b/src/app/components/sheet/reusable/lifting-moving/lifting-moving.component.html
@@ -1,3 +1,45 @@
-<p>
-  lifting-moving works!
-</p>
+<div class="sheetComponent">
+  <div class="sheetComponentHeader">
+    {{ 'SHEET.LIFTING_MOVING.LIFTING_MOVING' | translate }}
+  </div>
+  <div class="sheetComponentBody flex-container"
+       fxLayout="row"
+       fxLayoutAlign="space-between stretch">
+    <div class="flex-item" fxFlex="100%">
+      <table>
+        <tr>
+          <td>{{ 'SHEET.LIFTING_MOVING.BASIC_LIFT' | translate }}</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.LIFTING_MOVING.ONE_HANDED_LIFT' | translate }}</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.LIFTING_MOVING.TWO_HANDED_LIFT' | translate }}</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.LIFTING_MOVING.LIFTING_MOVING' | translate }}</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.LIFTING_MOVING.SHOVE_KNOCK_OVER' | translate }}</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.LIFTING_MOVING.RUNNING_SHOVE_KNOCK_OVER' | translate }}</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.LIFTING_MOVING.CARRY_ON_BACK' | translate }}</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>{{ 'SHEET.LIFTING_MOVING.SHIFT_SLIGHTLY' | translate }}</td>
+          <td></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
