Added a custom Gurpsy icon

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -41,7 +41,7 @@
           <span>   {{ 'MENU.DARK_THEME' | translate }}</span>
         </button>
         <button md-menu-item (click)="onOpenAboutDialog()">
-          <md-icon>pan_tool</md-icon>
+          <md-icon svgIcon="gurpsy-face"></md-icon>
           <span>{{ 'MENU.ABOUT' | translate }}</span>
         </button>
       </md-menu>
