--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.html
@@ -5,7 +5,7 @@
 
   <md-input-container>
     <input mdInput placeholder="{{'DIALOG.SETTINGS.SERVER_URL'| translate}}" [(ngModel)]="serverUrl"
-           (change)="onServerUrlChange(serverUrl, $event)">
+           (change)="onServerUrlChange(serverUrl)">
   </md-input-container>
 
   <div>
