Added icons for add/delete a book configuration

--- a/src/app/components/generic/book-configuration/book-configuration.component.html
+++ b/src/app/components/generic/book-configuration/book-configuration.component.html
@@ -17,5 +17,5 @@
          (change)="onChangeBookConfiguration()">
 </md-input-container>
 <button md-icon-button (click)="onDeleteBookConfiguration()">
-  <md-icon>keyboard_arrow_left</md-icon>
+  <md-icon>delete</md-icon>
 </button>
