--- a/src/app/components/generic/books-configuration/books-configuration.component.html
+++ b/src/app/components/generic/books-configuration/books-configuration.component.html
@@ -6,5 +6,5 @@
   (deleteBookConfiguration)="onDeleteBookConfiguration(book)">
 </gurpsy-book-configuration>
 <button md-icon-button (click)="onNewBookConfiguration()">
-  <md-icon>keyboard_arrow_left</md-icon>
+  <md-icon>playlist_add</md-icon>
 </button>
