--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.scss
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.scss
@@ -7,6 +7,7 @@ md-dialog-content {
     .settingsCardHeader {
       font-size: small;
       margin-bottom: 8px;
+      text-align: right;
     }
 
   }
